<resources>
    <string name="app_name" translatable="false">PicPuzz</string>
    <string name="levels">Levels</string>
    <string name="level_easy">Easy</string>
    <string name="level_normal">Normal</string>
    <string name="level_hard">Hard</string>
    <string name="level_extreme">Extreme</string>
    <string name="level_custom">Custom</string>
    <string name="hint_background">Show background</string>
    <string name="music_mute">Mute music</string>
    <string name="music_unmute">Unmute music</string>
    <string name="reset_progress">Reset progress</string>
    <string name="lightning_round">Lightning round</string>
    <string name="free_style">Free style</string>
    <string name="exit_dialog_body">Are you sure you want to exit?</string>
    <string name="exit_dialog_title">Warning!</string>
    <string name="exit_dialog_yes">Yes</string>
    <string name="exit_dialog_no">No</string>
    <string name="lightning_highscore">"Best time: "</string>
</resources>