<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/table_background"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="5">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/level_custom"
            android:gravity="center"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="10dp"
            android:textSize="30sp"
            style="@style/CustomText"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/easy"
            android:layout_margin="5dp"
            android:text="@string/lightning_round"
            android:textSize="18sp"
            android:id="@+id/b_lightning"
            android:background="@drawable/round_btns"
            style="@style/CustomText"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/easy"
            android:layout_margin="5dp"
            android:text="@string/free_style"
            android:textSize="18sp"
            android:id="@+id/b_free_style"
            android:background="@drawable/round_btns"
            style="@style/CustomText"/>

    </LinearLayout>
</LinearLayout>
