<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/table_background"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layoutDirection="ltr"
    android:weightSum="8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="5">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/levels"
        android:gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="10dp"
        android:textSize="30sp"
        style="@style/CustomText"/>




        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/easy"
            android:layout_margin="5dp"
            android:text="@string/level_easy"
            android:textSize="18sp"
            android:id="@+id/b_easy"
            android:background="@drawable/round_btns"
            style="@style/CustomText"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/normal"
            android:layout_margin="5dp"
            android:text="@string/level_normal"
            android:textSize="18sp"
            android:id="@+id/b_normal"
            android:background="@drawable/round_btns"
            style="@style/CustomText"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/hard"
            android:layout_margin="5dp"
            android:text="@string/level_hard"
            android:textSize="18sp"
            android:id="@+id/b_hard"
            android:background="@drawable/round_btns"
            style="@style/CustomText"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/extreme"
            android:layout_margin="5dp"
            android:text="@string/level_extreme"
            android:textSize="18sp"
            android:id="@+id/b_extreme"
            android:background="@drawable/round_btns"
            style="@style/CustomText"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:layout_weight="1">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/teal_700"
            android:layout_margin="5dp"
            android:textSize="18sp"
            android:text="@string/lightning_round"
            android:id="@+id/b_custom"
            android:background="@drawable/round_btns"
            style="@style/CustomText"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:gravity="right"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"


        android:orientation="horizontal"
        android:layout_weight="1"
        android:weightSum="2"
        >
<!--        android:layout_marginTop="30dp"-->

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/galleryButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            android:clickable="true"
            android:onClick="onImageFromGalleryClick"
            android:src="@drawable/ic_baseline_image_24"
            android:tint="@android:color/white"
            android:focusable="true"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            />
<!--        android:layout_marginEnd="10dp"-->

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/cameraButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="onImageFromCameraClick"
            android:focusable="true"
            android:src="@drawable/ic_baseline_photo_camera_24"
            android:layout_gravity="center"
            android:scaleType="centerInside"
            android:layout_marginLeft="6dp"
            />

    </LinearLayout>

</LinearLayout>